fixed icons alignment

--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -39,14 +39,15 @@
   }
 
   &__socials {
-    height: 24px;
+    height: 25px;
     width: 110px;
     display: flex;
+    align-items: center;
     justify-content: space-between;
   }
 
   &__socials-icon {
-    height: 24px;
+    height: 25px;
     transition: 0.2s ease-out fill;
 
     &:hover,
