--- a/src/styles/layout/_process.scss
+++ b/src/styles/layout/_process.scss
@@ -91,9 +91,11 @@
   &-card__btn {
     position: relative;
     width: 100%;
-    display: inline-block;
+    height: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: 0 auto;
-    text-align: center;
     color: $color-text-darker;
     outline: none;
     @extend %text-btn;
